trunk/Archive2/ee/8777bf85592edf/output
main.cpp:41:1: error: need 'typename' before 'avlTree<type>::avlNode' because 'avlTree<type>' is a dependent scope
 avlTree<type>::avlNode* 
 ^
